cập nhật app vote_app2, vote_app1 cần bổ sung namespace

--- a/vote_app/templates/vote_app/login.html
+++ b/vote_app/templates/vote_app/login.html
@@ -16,7 +16,7 @@
             {{ form.as_p }}
             <button type="submit">Login</button>
         </form>
-        <p>Chưa có tài khoản? <a href="{% url 'register' %}">Sign Up</a></p>
+        <p>Chưa có tài khoản? <a href="{% url 'vote_app:register' %}">Sign Up</a></p>
     </div>
 </body>
 </html>
