Cap nhat them bypassotp trong model de tao user,sua lai model assigment

--- a/vote_app2/templates/vote_app2/add_contestant.html
+++ b/vote_app2/templates/vote_app2/add_contestant.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Add Contestant</title>
+    <title>Tạo thí sinh</title>
 </head>
 <body>
-    <h2>Add Contestant</h2>
+    <h2>Thêm thí sinh</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
