--- a/vote_app2/templates/vote_app2/home.html
+++ b/vote_app2/templates/vote_app2/home.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="{% static 'vote_app2/css/home.css' %}">
     </head>
     <body>
-        <h1>Xin chào, {{user}}</h1>
+        <h1>Xin chào, {{user}}</h1> <a href="{%url 'vote_app2:login'%}">Logout</a>
         <h2>ĐIỂM THI CÁC THÍ SINH</h2>        
 
         <ul>
