--- a/vote_app2/templates/vote_app2/view_all_scores.html
+++ b/vote_app2/templates/vote_app2/view_all_scores.html
@@ -5,8 +5,10 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    
     <div class="container">
         <h1>Điểm thi</h1>
+        <a href="{%url 'vote_app2:login'%}">Logout</a>
         <table class="table table-striped">
             <thead>
                 <tr>
