Cap nhat view_all_scores de hien thi diem, su dung them custom_filter

--- a/vote_app2/templates/vote_app2/login.html
+++ b/vote_app2/templates/vote_app2/login.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="mt-5">Login</h2>
+        <h2 class="mt-5">ĐĂNG NHẬP</h2>
         <form method="post" class="mt-3">
             {% csrf_token %}
             {{ form.as_p }}
