--- a/vote_app2/templates/vote_app2/user_home.html
+++ b/vote_app2/templates/vote_app2/user_home.html
@@ -1,4 +1,5 @@
 <!-- home.html -->
+{% load custom_filters %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -17,7 +18,7 @@
                 <li>
                     {{ score_obj.contestant.full_name }}
                     Điểm: {{ score_obj.score }}
-                    ({{user}} chấm lúc: {{ score_obj.timestamp }})
+                    ({{user}} chấm lúc: {{ score_obj.timestamp|localtime }})
                 </li>
             {% empty %}
                 <li>- No scores available</li>
